# soundwire

./: Cargo.toml  flake.nix  readme.md
.github/workflows/: default.yml
src/: config.rs  device.rs  main.rs  pipe.rs  proto.rs  sink.rs  source.rs  switcher.rs
