[package]
name = "soundwire"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"

lazy_static = "1.4"

tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
futures = "0.3"

tracing = "0.1"
tracing-subscriber = "0.3"

nix = { version = "0.28", features = ["fs"]}

structopt = "0.3"

serde = { version = "1", features = ["derive", "rc"] }
serde_yaml = "0.9"
serde_json = "1"

regex = "1"

cpal = "0.15"
byteorder = "1.5"

ringbuf = "0.3"
parking_lot = { version = "0.12", features = ["arc_lock", "send_guard"] }

url = { version = "2.5", features = ["serde"] }
